--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>2.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
