--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/EasyAuction
 spring.datasource.username=postgres
 spring.datasource.password=Flyer1983
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
