создал Bid.yml разбираюсь many/one-many/one

--- a/src/main/resources/liquibase/changelog-master.yml
+++ b/src/main/resources/liquibase/changelog-master.yml
@@ -2,5 +2,5 @@ databaseChangeLog:
   - include:
       file: liquibase/changesets/create_lot.yml
 
-#  - include:
-#      file: liquibase/changesets/create_bid.yml
+  - include:
+      file: liquibase/changesets/create_bid.yml
