--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.password=Flyer1983
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-
+logging.level.ru.skypro.coursework.easyauction.service.LotServiceImpl=INFO
